[package]
name = "ech-workers-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[workspace]

[dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "io-util", "io-std", "macros", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.25"
webpki-roots = "0.26"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.21"
ws_stream_tungstenite = "0.13"

# 多路复用
yamux = "0.13"
futures = "0.3"

# SOCKS5
fast-socks5 = "0.9"

# HTTP 解析
httparse = "1.8"
http = "1.0"
h2 = "0.3"
bytes = "1.5"

# DNS-over-HTTPS
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
hickory-proto = "0.24"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步工具
async-trait = "0.1"
pin-project = "1.1"

# 网络工具
url = "2.5"
base64 = "0.21"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# TUN 模式
tun = { version = "0.7", features = ["async"] }
etherparse = "0.16"
ipnet = "2.9"
socket2 = "0.5"
rand = "0.8"

# FakeDNS 高性能并发
dashmap = "5.5"
lru = "0.12"

# RPC (用于 Qt GUI 通信)
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "iphlpapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
